# pythonMCworlsEditor

./: apka.py  data_display_mode.py  functions.py
nbt-snbt-json-parser/: README.md  pyproject.toml
nbt-snbt-json-parser/src/: functions.py  main.py  nbt_parser.py
nbt-snbt-json-parser/src/tests/: test_nbt_parser.py
