[tool.poetry]
name = "nbt-snbt-json-parser"
version = "0.1.0"
description = "A parser for SNBT and JSON using nbtlib."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
nbtlib = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"